--- a/0x02-i18n/templates/5-index.html
+++ b/0x02-i18n/templates/5-index.html
@@ -8,7 +8,7 @@
 
     <p>
         {% if g.user %}
-            {{ _('logged_in_as', username=g.user.name) }}
+            {{ gettext('logged_in_as', username=g.user.get('name')) }}
         {% else %}
             {{ _('not_logged_in') }}
         {% endif %}
